Fix spacing on SCSS, add instance variables

--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -1,156 +1,156 @@
+@import './constants.scss';
+
 .total-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 1px 3px 0 #bcbdbd, 0 0 0 1px #d4d4d5;
-    flex-direction: column;
-    height: 100%;
-    margin: 50px;
-    position: sticky;
-    top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: $box-shadow;
+  flex-direction: column;
+  height: 100%;
+  margin: 50px;
+  position: sticky;
+  top: 100px;
     
-    .title {
-        font-weight: 400;
-        margin: 10px;
-    }
+  .title {
+    font-weight: 400;
+    margin: 10px;
+  }
 
-    form {
-        color: black;
-        display: flex;
-        align-items: center;
-        width: 90%;
-        border-radius: 3px;
-        flex-direction: column;
-        padding: 20px;
+  form {
+    color: black;
+    display: flex;
+    align-items: center;
+    width: 90%;
+    border-radius: 3px;
+    flex-direction: column;
+    padding: 20px;
 
-        input {
-        border: 1px solid #999;
-        border-radius: 3px;
-        display: block;
-        padding: 5px 0 5px 5px;
-        background: #fff;
-        font-size: 16px;
-        line-height: 1.29em;
-        margin-bottom: 9px;
-        text-align: left;
-        margin: 5px;
-        width: 100%;
-
-    }
-
-     div {
-            display: flex;
-            justify-content: center;
-
-            input {
-                min-width: 200px;
-            }
-
-            input:first-child {
-                margin-left: 0;
-            }
-
-            input:last-child {
-                margin-right: 0;
-            }
-        }
-
-
-        input::placeholder {
-            text-align: left;
-        }
-
-        input[type=submit] {
-            color: white;
-            background: green;
-            text-align: center;
-            text-transform: uppercase;
-            font-weight: bold;
-            cursor: pointer;
-        }
+    input {
+      border: 1px solid #999;
+      border-radius: 3px;
+      display: block;
+      padding: 5px 0 5px 5px;
+      background: #fff;
+      font-size: 16px;
+      line-height: 1.29em;
+      margin-bottom: 9px;
+      text-align: left;
+      margin: 5px;
+      width: 100%;
 
     }
+
+    div {
+      display: flex;
+      justify-content: center;
+
+      input {
+        min-width: 200px;
+      }
+
+      input:first-child {
+        margin-left: 0;
+      }
+
+      input:last-child {
+        margin-right: 0;
+      }
+    }
+
+
+    input::placeholder {
+      text-align: left;
+    }
+
+    input[type=submit] {
+      color: white;
+      background: green;
+      text-align: center;
+      text-transform: uppercase;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+  }
 }
 
 .cart-parent-container {
-    justify-content: space-evenly;
-    display: flex;
-    flex-wrap: wrap;
+  justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-
 .cart-container {
-    flex-direction: column;
-    flex-direction: column;
+  flex-direction: column;
+  flex-direction: column;
 
-    .cart-image {
+  .cart-image {
     height: 200px;
     width: 200px;
-    }
+  }
 
-    .product-item {
-        margin: 0;
-        padding: 15px;
-        cursor: auto;
-        font-size: 14px;
-    }
+  .product-item {
+    margin: 0;
+    padding: 15px;
+    cursor: auto;
+    font-size: 14px;
+  }
 
-    .product-item:hover {
+  .product-item:hover {
     box-shadow: none;
-   }
+  }
 }
 
 .price {
-    box-shadow: 0 1px 3px 0 #bcbdbd, 0 0 0 1px #d4d4d5;
-    border-radius: 3px;
-    padding: 10px;
+  box-shadow: 0 1px 3px 0 #bcbdbd, 0 0 0 1px #d4d4d5;
+  border-radius: 3px;
+  padding: 10px;
 }
 
 .cart-item {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+
+  .cart-item-price {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
-    width: 100%;
+    flex-direction: column;
+    justify-content: center;
 
-    .cart-item-price {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
-
-        i {
-            margin: 10px 0;
-            color: darkred;
-            font-size: 20px;
-            cursor: pointer;
-        }
-
-        span {
-            margin: 5px;
-        }
+    i {
+      margin: 10px 0;
+      color: darkred;
+      font-size: 20px;
+      cursor: pointer;
     }
+
+    span {
+      margin: 5px;
+    }
+  }
 }
 
 .price-cart-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .checkout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  .checkout-message {
+    margin: 30px;
+    font-size: 24px;
+  }
 
-    .checkout-message {
-        margin: 30px;
-        font-size: 24px;
-    }
-
-    .giphy {
-        margin: 20px;
-    }
+  .giphy {
+    margin: 20px;
+  }
 }
